[project]
name = "scheduler-sim"
version = "0.1.0"
description = "ML-based scheduler simulator and research toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["scheduler_sim"]

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    ".venv",
]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.13"
